--- a/EgenHemsidaCSS.css
+++ b/EgenHemsidaCSS.css
@@ -23,6 +23,7 @@ h1 {
 	color: white;
 	text-align: center;
 	mask-image: linear-gradient(to bottom, black 80%, transparent); /* Fade out at the bottom */
+	flex-direction: column; /* Stack children vertically */
 }
 
 .hero::before { /* Pseudo-element for the scrolling background */
@@ -34,10 +35,46 @@ h1 {
 	height: 100%;
 	background: url('Images/ScrolingBackground.png') repeat-x; /* Ensure the image repeats horizontally */
 	background-size: auto 100%; /* Scale the image height to fit the container */
-	animation: slide 20s linear infinite; /* Infinite scrolling animation */
+	animation: slide 15s linear infinite; /* Infinite scrolling animation */
 	z-index: -1; /* Place behind the content */
 }
 
+.hero h1, .hero p {
+ mix-blend-mode: difference; /* Inverts the text color based on the background */
+ color: white; /* Fallback color */
+}
+
+.Divider { /* Divider between hero and main */
+ background-color: #000000;
+ height: 2px;
+ width: 100%;
+ margin: 50px 0;
+ text-align: center;
+}
+
+
+.Divider a { /* Divider buttons info */
+ background: rgba(76, 175, 80, 0);
+ color: #ffffff;
+ border: none;
+ padding: 10px 20px;
+ cursor: pointer;
+ opacity: 1;
+ font-size: 10px;
+ animation: fadeIn 2s;
+ text-decoration: none;
+ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.Divider a:visited { /* Divider buttons info */
+ color: rgb(255, 255, 255);
+ background: rgba(76, 175, 80, 0);
+ 
+}
+
+/* -------- KEYFRAME ANIMATION -------- */
+
+/* Animation for the scrolling background */
 @keyframes slide {
 	0% {
 		transform: translateX(0); /* Start at the initial position */
@@ -46,7 +83,8 @@ h1 {
 		transform: translateX(-47%); /* Move by half the width for seamless looping */
 	}
 }
-.hero h1, .hero p {
- mix-blend-mode: difference; /* Inverts the text color based on the background */
- color: white; /* Fallback color */
+/* Animation for the fade-in effect */
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
