--- a/Scrollingtext.css
+++ b/Scrollingtext.css
@@ -30,6 +30,15 @@
  
  text-align: center;
 }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    color: #000000;
+    padding: 50px;
+    min-height: 200vh;
+    background-color: #000000;
+}
+
 .Divider a { /* Divider buttons info */
  background: rgba(76, 175, 80, 0);
  color: #ffffff;
