W.I.P Global match making tutorial

--- a/Scrollingtext.css
+++ b/Scrollingtext.css
@@ -145,21 +145,11 @@ h1 {
     transform: translateY(0);
 }
 
-pre {
-    background: #f4f4f4;
-    border: 1px solid #ddd;
-    border-left: 3px solid #f36d33;
-    color: #ffffff;
-    page-break-inside: avoid;
-    font-family: monospace;
-    font-size: 15px;
-    line-height: 1.6;
-    margin-bottom: 1.6em;
-    max-width: 100%;
-    overflow: auto;
-    padding: 1em 1.5em;
-    display: block;
-    word-wrap: break-word;
+.content-overlay a,
+.content-overlay a:visited,
+.content-overlay a:hover {
+    color: rgb(92, 203, 255) !important; 
+    background: rgba(76, 175, 80, 0);
 }
 
 /* For users who prefer reduced motion */
